# AscBazel

./: BUILD.bazel  Makefile  README.md  WORKSPACE  package-lock.json  package.json
asc_tools/: BUILD.bazel  asc_build.bzl  asc_toolchain.bzl
src/: inner.ts  test.ts
